# NN_RNS

./: .gitignore  MANIFEST.in  README.md  demo.ipynb  pyproject.toml
eos/: dd2.rns  sfho.rns  sly.rns
src/nn_rns/: __init__.py  eos.py  networks.py  units.py
src/nn_rns/NN/: best_causalCNN_kepler_model.pth  best_causalCNN_rotate_model.pth  best_causalCNN_static_model.pth  global_k_mean_vals.npy  global_k_std_vals.npy  global_mean_vals.npy  global_r_mean_vals.npy  global_r_std_vals.npy  global_std_vals.npy  nn.py
