[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-rns"
dynamic = ["version"]
description = "Neural-network surrogate models for rotating neutron star sequences."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.0",
]
authors = [
  { name = "NN_RNS contributors" },
]
keywords = ["neutron-star", "equation-of-state", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/zzhu-astro/NN_RNS"
Repository = "https://github.com/zzhu-astro/NN_RNS"
Issues = "https://github.com/zzhu-astro/NN_RNS/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "nn_rns._version.__version__"}

[tool.setuptools.package-data]
nn_rns = ["NN/*.npy", "NN/*.pth"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
